# dialog_task_manager

./: .env.example  .gitattributes  .gitignore  README.md  batch_deepseek_simple.py  convert_hermes.py  convert_openclaw.py  generate_questions.py  generate_questions_llm.py  pyproject.toml  quality_check.py  questions_1200.json  run_hermes_pipeline.py  run_openclaw_pipeline.py  server.py  任务管理系统开发需求.md  脚本使用说明.md
backend/: app.py  auth.py  config.py  constants.py  database.py  deps.py  models.py  schemas.py
backend/routers/: api.py  auth.py
backend/services/: assistant_turns.py  difficulty.py  external_zip_qc.py  pipeline.py  qc_hints.py  quality_report.py  questions.py  sample_paths.py  submission_progress.py  submission_validation.py  tasks.py  thinking_effort.py
deploy/: dialog-task-manager.service  start.sh
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: AdminPage.tsx  DashboardPage.tsx  LoginPage.tsx  MyTasksPage.tsx  TaskDetailPage.tsx  TasksPage.tsx
sample/hermes/: session-20260711_211540_2d49e8.json
sample/openclaw/: 25759e79-650d-4702-8f9d-216f471c3535.jsonl
