[project]
name = "make-sample"
version = "0.1.0"
description = "样本制作任务管理系统"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.45.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "pymysql>=1.1.1",
    "python-multipart>=0.0.12",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "aiofiles>=24.1.0",
]

[tool.uv]
package = false
